fix: dark mode in the compliance page
Ref: SRX-LDLEDD

--- a/services/frontend-service/src/assets/_base.scss
+++ b/services/frontend-service/src/assets/_base.scss
@@ -84,3 +84,7 @@ body,
     font-size: 14px;
     line-height: 18px;
 }
+
+input[type="date"] {
+  color-scheme: light dark;
+}
