--- a/services/frontend-service/src/assets/_variables.scss
+++ b/services/frontend-service/src/assets/_variables.scss
@@ -195,5 +195,7 @@ $warning-color-locked: #ff8c00;
         --mdc-theme-anchor: #ffffff;
         --mdc-theme-anchor-on-surface: #ffffff;
         --mdc-text-button-label-text-color: #ffffff;
+        --mdc-outlined-button-label-text-color: #fffff;
+        --mdc-outlined-button-outline-color: #ffffff;
     }
 }
